--- a/services.html
+++ b/services.html
@@ -64,11 +64,11 @@
 								<p><a href="" class="btn btn-secondary me-2">Products Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
-						<div class="col-lg-7">
+						<!-- <div class="col-lg-7">
 							<div class="hero-img-wrap">
 								<img src="images/couch.png" class="img-fluid">
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
