--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="GenOasis navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">GenOasis<br><span style="font-size: 0.8em; color: #FFFFFF; opacity: 1;">Technologies</span><span>.</span></a>
+				<a class="navbar-brand" href="index.html">GenOasis<br><span style="font-size: 0.8em; color: #FFFFFF; opacity: 1;"></span><span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenOasis" aria-controls="navbarsGenOasis" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -58,16 +58,16 @@
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
 								<h1>About Us</h1>
-								<p class="mb-4">GenOasis Technologies stands at the forefront of innovation, delivering cutting-edge solutions for water treatment, industrial applications, and laboratory equipment. With a strong focus on quality and sustainability, we provide a comprehensive range of products, from essential water treatment chemicals and advanced filtration systems to high-precision lab equipment such as industrial furnaces. Our solutions are designed to support the unique needs of various industries, helping our clients achieve optimal performance, durability, and environmental compliance in their operations.
+								<p class="mb-4">GenOasis stands at the forefront of innovation, delivering cutting-edge solutions for water treatment, industrial applications, and laboratory equipment. With a strong focus on quality and sustainability, we provide a comprehensive range of products, from essential water treatment chemicals and advanced filtration systems to high-precision lab equipment such as industrial furnaces. Our solutions are designed to support the unique needs of various industries, helping our clients achieve optimal performance, durability, and environmental compliance in their operations.
 
 									<p>Our team brings together extensive expertise in engineering, product development, and customer service to deliver customized solutions that meet global standards. We take pride in being a reliable partner, working closely with our clients to ensure they receive tailored products and services that exceed expectations. From small laboratories to large-scale industrial facilities, our products enhance productivity, maintain rigorous quality standards, and enable our clients to achieve their goals with confidence.</p>
 									
-									<p>At GenOasis Technologies, we believe in fostering a future where industries, laboratories, and communities benefit from safe, efficient, and sustainable solutions. Our commitment to innovation drives us to continuously improve our offerings and expand our product range, providing our clients with the tools they need to lead in their fields. We are passionate about building a cleaner, greener world, and every product we create is a step toward that shared vision.</p>
+									<p>At GenOasis, we believe in fostering a future where industries, laboratories, and communities benefit from safe, efficient, and sustainable solutions. Our commitment to innovation drives us to continuously improve our offerings and expand our product range, providing our clients with the tools they need to lead in their fields. We are passionate about building a cleaner, greener world, and every product we create is a step toward that shared vision.</p>
 								<p>With a commitment to innovation and a focus on quality, we work alongside our clients to tackle water treatment challenges head-on. Our team of experts brings a wealth of knowledge and experience to every partnership, helping clients enhance operational efficiency, meet regulatory standards, and achieve long-term success. At GenOasis, we’re driven by a vision of a cleaner, healthier future—and we’re proud to play our part in making that vision a reality.</p>
 								<h2 style="color: white;">Mission</h2>
 								<p class="mb-4">Our mission is to lead in delivering innovative, sustainable solutions across water treatment, industrial applications, and laboratory equipment. We are committed to providing high-quality products and exceptional service, empowering our clients to achieve operational excellence, support environmental sustainability, and drive progress in their respective fields.</p>
 								<h2 style="color: white;">Vision</h2>
-								<p class="mb-4">Our vision is to be a global leader in providing advanced, eco-friendly technologies for water treatment, industrial solutions, and laboratory equipment. We aim to shape a future where industries and research facilities can rely on our cutting-edge products to foster sustainability, innovation, and lasting impact across communities and environments worldwide.</p>
+								<p class="mb-4">Our vision is to be a global leader in providing advanced, eco-friendly  for water treatment, industrial solutions, and laboratory equipment. We aim to shape a future where industries and research facilities can rely on our cutting-edge products to foster sustainability, innovation, and lasting impact across communities and environments worldwide.</p>
 								<p><a href="" class="btn btn-secondary me-2">Products Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
@@ -89,7 +89,7 @@
 				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
 						<h2 class="section-title">Why Choose Us</h2>
-						<p style="color: black;">Choosing GenOasis Technologies means partnering with a company committed to excellence, innovation, and sustainability. Our comprehensive range of high-quality products is designed to meet the stringent demands of water treatment, industrial applications, and laboratory environments, ensuring exceptional performance and reliability. We offer customized solutions tailored to your unique needs, backed by a dedicated team of experts ready to support you every step of the way. At GenOasis, we don’t just provide products—we deliver solutions that empower your operations and contribute to a sustainable future.</p>
+						<p style="color: black;">Choosing GenOasis means partnering with a company committed to excellence, innovation, and sustainability. Our comprehensive range of high-quality products is designed to meet the stringent demands of water treatment, industrial applications, and laboratory environments, ensuring exceptional performance and reliability. We offer customized solutions tailored to your unique needs, backed by a dedicated team of experts ready to support you every step of the way. At GenOasis, we don’t just provide products—we deliver solutions that empower your operations and contribute to a sustainable future.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -120,7 +120,7 @@
 										<img src="images/support.svg" alt="Image" class="imf-fluid">
 									</div>
 									<h3>Expert Support and Service</h3>
-									<p>Our knowledgeable team offers comprehensive support at every stage, from product selection to after-sales service. With GenOasis Technologies, you can count on responsive, expert assistance whenever you need it.</p>
+									<p>Our knowledgeable team offers comprehensive support at every stage, from product selection to after-sales service. With GenOasis, you can count on responsive, expert assistance whenever you need it.</p>
 								</div>
 							</div>
 
