--- a/Products.html
+++ b/Products.html
@@ -30,7 +30,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="GenOasis navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">GenOasis<br><span style="font-size: 0.8em; color: #FFFFFF; opacity: 1;"></span><span>.</span></a>
+				<a class="navbar-brand" href="index.html">GenOasis<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenOasis" aria-controls="navbarsGenOasis" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -43,8 +43,7 @@
 						</li>
 						<li class="active"><a class="nav-link" href="Products.html">Products</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
-						<li><a class="nav-link" href="services.html">Services</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
+
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
 				</div>
@@ -54,23 +53,18 @@
 		<!-- End Header/Navigation -->
 
 		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>Products</h1>
-							</div>
-						</div>
-						<div class="col-lg-7">
-							
+		<div class="hero hero-products">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-lg-5">
+						<div class="intro-excerpt">
+							<h1 style="font-family: 'Abel', sans-serif;">Products & Services</h1>
 						</div>
 					</div>
 				</div>
 			</div>
-		<!-- End Hero Section -->
-
-		
+		</div>
+		<!-- End Hero Section -->		
 
 		<div class="untree_co-section product-section before-footer-section">
 		    <div class="container">
@@ -81,7 +75,6 @@
 						<a class="product-item" href="#">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Water Treatment Solution</h3>
-							<strong class="product-price"></strong>
 						</a>
 					</div> 
 					<!-- End Column 1 -->
@@ -90,8 +83,7 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
 							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Filtration and Reevrse Osmosis</h3>
-							<strong class="product-price"></strong>
+							<h3 class="product-title">Filtration and Reverse Osmosis</h3>
 						</a>
 					</div> 
 					<!-- End Column 2 -->
@@ -101,7 +93,6 @@
 						<a class="product-item" href="#">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Specialty Chemicals</h3>
-							<strong class="product-price"></strong>
 						</a>
 					</div>
 					<!-- End Column 3 -->
@@ -109,9 +100,8 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
+							<img src="images/product-4.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Laboratory Equipments</h3>
-							<strong class="product-price"></strong>
 						</a>
 					</div>
 					<!-- End Column 4 -->
@@ -150,7 +140,6 @@
 						<a class="product-item" href="#">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price"></strong>
 						</a>
 					</div> -->
 					<!-- End Column 3 -->
@@ -160,7 +149,6 @@
 						<a class="product-item" href="#">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price"></strong>
 						</a>
 					</div> -->
 					<!-- End Column 4 -->
@@ -173,7 +161,7 @@
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
-
+<!-- 
 				<div class="sofa-img">
 					<img src="images/sofa.png" alt="Image" class="img-fluid">
 				</div>
@@ -199,12 +187,12 @@
 
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
 						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">GenOasis<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
