--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="GenOasis navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">GenOasis<br><span style="font-size: 0.8em; color: #FFFFFF; opacity: 1;"></span><span>.</span></a>
+				<a class="navbar-brand" href="index.html">GenOasis<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenOasis" aria-controls="navbarsGenOasis" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -43,8 +43,7 @@
 						</li>
 						<li><a class="nav-link" href="Products.html">Products</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
-						<li><a class="nav-link" href="services.html">Services</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
+
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
 				</div>
@@ -54,27 +53,22 @@
 		<!-- End Header/Navigation -->
 
 		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>Pure Solutions, Powerful Results<span clsas="d-block">Your Partner in Water Treatment Excellence</span></h1>
-								<p class="mb-4">At GenOasis, we are dedicated to supporting water treatment plants with top-quality chemicals and essential supplies tailored for effective and sustainable water management. Our range of products is crafted to meet the unique demands of each facility, from advanced filtration solutions to specialized chemicals that ensure water safety and quality. We believe in empowering our partners with reliable, efficient tools that not only enhance system performance but also contribute to a healthier environment. With our commitment to innovation and excellence, we are here to help you turn water challenges into solutions, safeguarding communities and supporting a sustainable future.</p>
-								<p>
-									<a href="Products.html" class="btn btn-secondary me-2">Products</a>
-									<a href="about.html" class="btn btn-white-outline">About Us</a>
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
-							</div>
+		<div class="hero hero-home">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-lg-5">
+						<div class="intro-excerpt">
+							<h1>Pure Solutions, Powerful Results.<span class="d-block">Your Partner in Water Treatment Excellence.</span></h1>
+							<!-- <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p> -->
+							<p>
+								<a href="Products.html" class="btn btn-secondary me-2">Products</a>
+								<a href="about.html" class="btn btn-white-outline">About Us</a>
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		<!-- End Hero Section -->
 
 		<!-- Start Product Section -->
@@ -94,8 +88,7 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
 							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price"></strong>
+							<h3 class="product-title">Filtration and Reverse Osmosis</h3>
 						</a>
 					</div> 
 					<!-- End Column 2 -->
@@ -104,8 +97,7 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price"></strong>
+							<h3 class="product-title">Specialty Chemicals</h3>
 						</a>
 					</div>
 					<!-- End Column 3 -->
@@ -114,8 +106,7 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price"></strong>
+							<h3 class="product-title">Water Treatment Solution</h3>
 						</a>
 					</div>
 					<!-- End Column 4 -->
@@ -123,9 +114,8 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart.html">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price"></strong>
+							<img src="images/product-4.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">Lab Equipments</h3>
 						</a>
 					</div>
 					<!-- End Column 4 -->
@@ -133,14 +123,13 @@
 			</div>
 		</div>
 		<!-- End Product Section -->
-
 		<!-- Start Why Choose Us Section -->
 		<div class="why-choose-section">
 			<div class="container">
-				<div class="row justify-content-between">
+				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
 						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+						<p style="color: black;">Choosing GenOasis means partnering with a company committed to excellence, innovation, and sustainability. Our comprehensive range of high-quality products is designed to meet the stringent demands of water treatment, industrial applications, and laboratory environments, ensuring exceptional performance and reliability. We offer customized solutions tailored to your unique needs, backed by a dedicated team of experts ready to support you every step of the way. At GenOasis, we don’t just provide products—we deliver solutions that empower your operations and contribute to a sustainable future.</p>
 
 						<div class="row my-5">
 							<div class="col-6 col-md-6">
@@ -148,8 +137,9 @@
 									<div class="icon">
 										<img src="images/truck.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3 style="font-weight: 600;">High-Quality Products</h3>
+									<p>We prioritize quality in every product, ensuring durability, reliability, and compliance with international standards. From water treatment chemicals to lab furnaces, our products are crafted to deliver exceptional performance.
+									</p>
 								</div>
 							</div>
 
@@ -158,8 +148,9 @@
 									<div class="icon">
 										<img src="images/bag.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Easy to Products</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3 style="font-weight: 600;">Customized Solutions</h3>
+									<p>We understand that each client’s needs are unique. Our team works closely with you to provide tailored solutions that align with your specific requirements, ensuring optimal results and maximum efficiency.
+									</p>
 								</div>
 							</div>
 
@@ -168,8 +159,8 @@
 									<div class="icon">
 										<img src="images/support.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3 style="font-weight: 600;">Expert Support and Service</h3>
+									<p>Our knowledgeable team offers comprehensive support at every stage, from product selection to after-sales service. With GenOasis, you can count on responsive, expert assistance whenever you need it.</p>
 								</div>
 							</div>
 
@@ -178,24 +169,15 @@
 									<div class="icon">
 										<img src="images/return.svg" alt="Image" class="imf-fluid">
 									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
+									<h3 style="font-weight: 600;">Commitment to Sustainability</h3>
+									<p>We are dedicated to eco-friendly practices, providing sustainable products that minimize environmental impact. Our solutions are designed to support your goals while promoting a cleaner, healthier planet.
+									</p>
 								</div>
 							</div>
 
 						</div>
 					</div>
 
-					<div class="col-lg-5">
-						<div class="img-wrap">
-							<img src="images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<!-- End Why Choose Us Section -->
 
 		<!-- Start We Help Section -->
 		<div class="we-help-section">
@@ -203,14 +185,14 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-7 mb-5 mb-lg-0">
 						<div class="imgs-grid">
-							<div class="grid grid-1"><img src="images/img-grid-1.jpg" alt="Untree.co"></div>
-							<div class="grid grid-2"><img src="images/img-grid-2.jpg" alt="Untree.co"></div>
-							<div class="grid grid-3"><img src="images/img-grid-3.jpg" alt="Untree.co"></div>
+							<div class="grid grid-1"><img src="images/img-grid-1.png"></div>
+							<div class="grid grid-2"><img src="images/img-grid-2.jpg"></div>
+							<div class="grid grid-3"><img src="images/img-grid-3.jpg"></div>
 						</div>
 					</div>
-					<div class="col-lg-5 ps-lg-5">
+					<!-- <div class="col-lg-5 ps-lg-5">
 						<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-						<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+						<p>Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future. morbi tristique senectus et netus et malesuada</p>
 
 						<ul class="list-unstyled custom-list my-4">
 							<li>Donec vitae odio quis nisl dapibus malesuada</li>
@@ -219,14 +201,14 @@
 							<li>Donec vitae odio quis nisl dapibus malesuada</li>
 						</ul>
 						<p><a herf="#" class="btn">Explore</a></p>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
 		<!-- End We Help Section -->
 
 		<!-- Start Popular Product -->
-		<div class="popular-product">
+		<!-- <div class="popular-product">
 			<div class="container">
 				<div class="row">
 
@@ -271,11 +253,11 @@
 
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- End Popular Product -->
 
 		<!-- Start Testimonial Slider -->
-		<div class="testimonial-section">
+		<!-- <div class="testimonial-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 mx-auto text-center">
@@ -300,7 +282,7 @@
 
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future. morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
 												</blockquote>
 
 												<div class="author-info">
@@ -315,7 +297,7 @@
 										</div>
 									</div>
 								</div> 
-								<!-- END item -->
+								END item
 
 								<div class="item">
 									<div class="row justify-content-center">
@@ -323,7 +305,7 @@
 
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future. morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
 												</blockquote>
 
 												<div class="author-info">
@@ -338,7 +320,7 @@
 										</div>
 									</div>
 								</div> 
-								<!-- END item -->
+								END item
 
 								<div class="item">
 									<div class="row justify-content-center">
@@ -346,7 +328,7 @@
 
 											<div class="testimonial-block text-center">
 												<blockquote class="mb-5">
-													<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
+													<p>&ldquo;Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future. morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
 												</blockquote>
 
 												<div class="author-info">
@@ -361,19 +343,18 @@
 										</div>
 									</div>
 								</div> 
-								<!-- END item -->
-
+								END item
 							</div>
 
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- End Testimonial Slider -->
 
 		<!-- Start Blog Section -->
-		<div class="blog-section">
+		<!-- <div class="blog-section">
 			<div class="container">
 				<div class="row mb-5">
 					<div class="col-md-6">
@@ -424,14 +405,14 @@
 
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- End Blog Section -->	
 
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
 
-				<div class="sofa-img">
+				<!-- <div class="sofa-img">
 					<img src="images/sofa.png" alt="Image" class="img-fluid">
 				</div>
 
@@ -456,12 +437,12 @@
 
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
 						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">GenOasis<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
@@ -514,7 +495,7 @@
 				<div class="border-top copyright">
 					<div class="row pt-4">
 						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a hreff="https://themewagon.com">ThemeWagon</a>  <!-- License information: https://untree.co/license/ -->
+							<p class="mb-2 text-center text-lg-start">Copyright &copy; <script>document.write(new Date().getFullYear());</script>. All Rights Reserved. 
             </p>
 						</div>
 
