Add water-treatment page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</div>
 					
 					<div class="col-12 col-md-4 mb-5">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="water-treatment.html">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Water Treatment Solution</h3>
 						</a>
@@ -274,14 +274,9 @@
 				<div class="border-top copyright">
 					<div class="row pt-4">
 						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy; <script>document.write(new Date().getFullYear());</script>. All Rights Reserved.</p>
+							<p class="mb-2 text-center text-lg-start">&copy; <script>document.write(new Date().getFullYear());</script> GenOasis | All Rights Reserved.</p>
 						</div>
-						<div class="col-lg-6 text-center text-lg-end">
-							<ul class="list-unstyled d-inline-flex ms-auto">
-								<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
+
 
 					</div>
 				</div>
