adding html to products page

--- a/Products.html
+++ b/Products.html
@@ -80,7 +80,7 @@
 					</div>
 					
 					<div class="col-12 col-md-4 mb-5">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="water-treatment.html">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Water Treatment Solution</h3>
 						</a>
