changes to industries section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -216,7 +215,6 @@
 		</div> -->
 		<!-- End Why Choose Us Section -->
 		<!-- Start We Help Section -->
-		<!-- Title Row -->
 		<div class="we-help-section">
 			<div class="container">
 				<div class="row mb-5">
@@ -226,10 +224,76 @@
 					</div>
 				</div>
 				
-				<div class="row justify-content-between">
-					<div class="col-lg-12 mb-5 mb-lg-0">
-						<img src="images/industries.png" alt="Industries We Serve" class="img-fluid">
-						<p><a href="about.html" style="color: #006400; text-decoration: none; font-weight: bold;">Learn More →</a></p>
+				<div class="row justify-content-center">
+					<!-- Waste Water Treatment -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/water-industry.png" alt="Water & Waste Water Treatment" class="img-fluid industry-icon">
+							<img src="images/water-industry-hover.png" alt="Water & Waste Water Treatment Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Water & Waste Water Treatment</h4>
+						</div>	
+					</div>
+
+					<!-- Oil & Gas Industry -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/oilgas-industry.png" alt="Oil & Gas Industry" class="img-fluid industry-icon">
+							<img src="images/oilgas-industry-hover.png" alt="Oil & Gas Industry Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Oil & Gas</h4>
+						</div>
+					</div>	
+					
+					<!-- Power Plant -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/power-plant-industry.png" alt="Power Plant" class="img-fluid industry-icon">
+							<img src="images/power-plant-industry-hover.png" alt="Power Plant Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Power Plant</h4>
+						</div>
+					</div>
+
+					<!-- Irrigation -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/irrigation-industry.png" alt="Irrigation" class="img-fluid industry-icon">
+							<img src="images/irrigation-industry-hover.png" alt="Irrigation Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Irrigation</h4>
+						</div>
+					</div>
+
+					<!-- Food Industry -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/food-industry.png" alt="Food Industry" class="img-fluid industry-icon">
+							<img src="images/food-industry-hover.png" alt="Food Industry Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Food</h4>
+						</div>
+					</div>
+
+					<!-- Desalination -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/desalination-industry.png" alt="Desalination" class="img-fluid industry-icon">
+							<img src="images/desalination-industry-hover.png" alt="Desalination Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Desalination</h4>
+						</div>
+					</div>
+					<!-- Paper Industry -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/paper-industry.png" alt="Paper Industry" class="img-fluid industry-icon">
+							<img src="images/paper-industry-hover.png" alt="Paper Industry Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Paper</h4>
+						</div>
+					</div>
+
+					<!-- Process Industry -->
+					<div class="col-md-3 col-sm-6 mb-4">
+						<div class="industry-item">
+							<img src="images/process-industry.png" alt="Process Industry" class="img-fluid industry-icon">
+							<img src="images/process-industry-hover.png" alt="Process Industry Details" class="img-fluid industry-hover">
+							<h4 class="text-center mt-2">Process</h4>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -259,9 +323,9 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Products</a></li>
-									<li><a href="#">Contact us</a></li>
+									<li><a href="about.html">About us</a></li>
+									<li><a href="Products.html">Products</a></li>
+									<li><a href="contact.html">Contact us</a></li>
 								</ul>
 							</div>
 
