--- a/Products.html
+++ b/Products.html
@@ -136,9 +136,9 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Products</a></li>
-									<li><a href="#">Contact us</a></li>
+									<li><a href="about.html">About us</a></li>
+									<li><a href="Products.html">Products</a></li>
+									<li><a href="contact.html">Contact us</a></li>
 								</ul>
 							</div>
 
