--- a/Products.html
+++ b/Products.html
@@ -19,7 +19,7 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>GenOasis</title>
+		<title>GenOasis - Our Products</title>
 	</head>
 
 	<body>
