--- a/water-treatment.html
+++ b/water-treatment.html
@@ -244,7 +244,7 @@
             }
         }
     </style>
-    <title>GenOasis</title>
+    <title>GenOasis - Water Treatment</title>
 </head>
 
 <body>
