add email message

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -117,30 +116,34 @@
                 </div>
               </div>
 
-              <form>
+              <form action="https://formsubmit.co/info@genoasis.com" method="POST">
                 <div class="row">
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="fname">First name</label>
-                      <input type="text" class="form-control" id="fname">
+                      <input type="text" class="form-control" name="First Name" required>
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="lname">Last name</label>
-                      <input type="text" class="form-control" id="lname">
+                      <input type="text" class="form-control" name="Last Name" required>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email">
+                  <input type="email" class="form-control" name="email" required>
                 </div>
 
                 <div class="form-group mb-5">
                   <label class="text-black" for="message">Message</label>
-                  <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
+                  <textarea class="form-control" name="message" cols="30" rows="5" required></textarea>
                 </div>
+
+                <!-- Customize your email settings -->
+                <input type="hidden" name="_subject" value="New Contact Form Message from GenOasis Website">
+                <input type="hidden" name="_template" value="table">
 
                 <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
               </form>
